--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar bg-dark">
-    <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
+    <form class="d-flex justify-content-end">
+        <input class="form-control me-2" [(ngModel)]="query" name="query" type="search" placeholder="Search"/>
+        <button class="btn btn-outline-success" type="submit" (click)="SearchQuery(query)">Search</button>
     </form>
 </nav>
