Modified header HTML

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar bg-dark">
-    <form class="d-flex justify-content-end">
+<nav class="navbar bg-dark d-flex justify-content-end p-3">
+    <form class="d-flex">
         <input class="form-control me-2" [(ngModel)]="query" name="query" type="search" placeholder="Search"/>
         <button class="btn btn-outline-success" type="submit" (click)="SearchQuery(query)">Search</button>
     </form>
