--- a/frontend/src/app/components/search-result/search-result.component.html
+++ b/frontend/src/app/components/search-result/search-result.component.html
@@ -1,8 +1,13 @@
-<ul>
+<ul class="list-group">
   @if(searchResult$ | async; as searchResult) {
     <p>Books found: {{searchResult.numFound}}</p>
-    @for(book of searchResult.docs; track book.title) {
-    <li>{{book.title}}, {{book.author_name}}</li>
+    @for(book of searchResult.docs; track book.key) {
+      <li class="list-group-item">
+        <div class="d-flex justify-content-start ">
+          <img class="img-thumbnail" src="https://covers.openlibrary.org/b/id/{{book.cover_i}}-M.jpg" [alt]="book.title" width="100" height="50" />
+          {{book.title}}, {{book.author_name}}
+        </div>
+      </li>
     }
   }
 </ul>
