--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,4 +1,12 @@
-<form [formGroup]="registerForm">
+<div class="alert">
+    @if (message !== null) {
+        <div class="alert alert-danger alert-dismissable fade show" role="alert">
+            {{message}}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+</div>
+<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="flex">
         <div class="mb-3">
             <label for="username" class="form-label">Username</label>
