--- a/frontend/src/app/components/search-result/search-result.component.html
+++ b/frontend/src/app/components/search-result/search-result.component.html
@@ -4,9 +4,9 @@
     @for(book of searchResult.docs; track book.key) {
       <li class="list-group-item">
         <div class="d-flex justify-content-start ">
-          <img class="img-thumbnail" src="https://covers.openlibrary.org/b/id/{{book.cover_i}}-M.jpg" [alt]="book.title" width="75" height="25"/>
+          <img class="img-thumbnail" [src]="getCoverUrl(book)" [alt]="book.title" width="100" height="200"/>
           <p><a routerLink="">{{book.title}}</a> <br> 
-          by {{book.author_name}}</p>
+          by {{book.author_name.join(", ")}}</p>
         </div>
       </li>
     }
